[package]
name = "paladin-memo-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = "1.44.1"
solana-sdk = "2.2.0"
solana-client = "2.2.0"
solana-rpc-client-api = "2.2.0"
anyhow = "1.0.97"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = "0.12.15"
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rand = "0.8.5"
figment = {version = "0.10.19", features = ["env"]}
dotenvy = "0.15.7"
